--- a/index.html
+++ b/index.html
@@ -2,32 +2,39 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1."> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="style.css">
   
   <title>Frontend Mentor | NFT preview card component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
+  <div id="container">
+  <div></div>
 
-  Equilibrium #3429
+    <div id="card">
+      <img id="nft" src="images/image-equilibrium.jpg" alt="">
+      <div id='label'>Equilibrium #3429</div>
+      <div id="description">
+        Our Equilibrium collection promotes balance and calm.
+      </div>
+      <div id="info">
+        <div id="price"><img src="images/icon-ethereum.svg" alt="" class="icon"> 0.041 ETH</div>
+        <div id="days"><img src="images/icon-clock.svg" alt=""class="icon"> 3 days left</div>
+      </div>
+      <div id="author"><img src="images/image-avatar.png" id="avatar">Creation
+        of <span id="name">Jules Wyvern</span></div>
+    </div>
 
-  Our Equilibrium collection promotes balance and calm.
-
-  0.041 ETH
-  3 days left
   
-  Creation of Jules Wyvern
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/J-Guevara12">Juan Esteban Guevara</a>.
+  </div>
   </div>
 </body>
 </html>
