added hover animation

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
   <div></div>
 
     <div id="card">
-      <img id="nft" src="images/image-equilibrium.jpg" alt="">
+      <div id="image"class='active'>
+        <img id="nft" src="images/image-equilibrium.jpg" alt="">
+        <div id="overlay"><img id='view' class='active' src="images/icon-view.svg" alt=""></div>
+      </div>
       <div id='label'>Equilibrium #3429</div>
       <div id="description">
         Our Equilibrium collection promotes balance and calm.
